--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:theme="@style/Theme.Android_shopping"
             tools:targetApi="31">
         <activity
-                android:name=".MainActivity"
+                android:name=".ShoppingChannelActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
