--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+            android:name=".application.MainApplication"
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
@@ -16,6 +17,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.Android_shopping"
             tools:targetApi="31">
+
+        <activity android:name=".ShoppingCartActivity" />
+
         <activity
                 android:name=".ShoppingChannelActivity"
                 android:exported="true">
