--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.Android_shopping"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
             tools:targetApi="31">
 
         <activity android:name=".ShoppingCartActivity" />
